fix transparent sidebar on smaller screens

--- a/css/scaling.css
+++ b/css/scaling.css
@@ -24,6 +24,7 @@
 		padding-left: 24px;
 		transform: translateX(-100%);
 		transition: transform 0.3s ease-out;
+		background-color: #000;
 	}
 
 	#sidebar.show {
